# debugging

./: CMakeLists.txt
flash_attention/: CMakeLists.txt  gemm.cu  main.cu
flash_attention/include/: flash.cuh
flash_attention/src/: flash.cu
